Forked SuperListview, fixed up some bugs, upped Gradle Version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-VERSION_NAME=1.5.2
-VERSION_CODE=16
-GROUP=com.quentindommerc.superlistview
+VERSION_NAME=1.5.5-SNAPSHOT
+VERSION_CODE=18
+GROUP=org.notlocalhost.superlistview
 
-POM_DESCRIPTION=This is not only a ListView.
-POM_URL=https://github.com/dommerq/SuperListview
-POM_SCM_URL=https://github.com/dommerq/SuperListview
-POM_SCM_CONNECTION=scm:git@github.com:dommerq/SuperListview.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:dommerq/SuperListview.git
+POM_DESCRIPTION=Extended Features for ListView and GridView
+POM_URL=https://github.com/pedlar/SuperListview
+POM_SCM_URL=https://github.com/pedlar/SuperListview
+POM_SCM_CONNECTION=scm:git@github.com:pedlar/SuperListview.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:pedlar/SuperListview.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=kentin_domerc
-POM_DEVELOPER_NAME=Quentin Dommerc
+POM_DEVELOPER_ID=pedlar
+POM_DEVELOPER_NAME=Madison Koenig
 POM_DEVELOPER_EMAIL=
 POM_DEVELOPER_URL=
 POM_DEVELOPER_ROLE=
