--- a/Sample/src/main/AndroidManifest.xml
+++ b/Sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quentindommerc.superlistview.sample" >
+    package="org.notlocalhost.superlistview.sample" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.quentindommerc.superlistview.sample.MainActivity"
+            android:name="org.notlocalhost.superlistview.sample.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.quentindommerc.superlistview.sample.GridSample"
+            android:name="org.notlocalhost.superlistview.sample.GridSample"
             android:label="@string/title_activity_grid_sample" >
         </activity>
         <activity
-            android:name="com.quentindommerc.superlistview.sample.ListSample"
+            android:name="org.notlocalhost.superlistview.sample.ListSample"
             android:label="@string/title_activity_list_sample" >
         </activity>
     </application>
