--- a/SuperListviewLibrary/src/main/AndroidManifest.xml
+++ b/SuperListviewLibrary/src/main/AndroidManifest.xml
@@ -1,11 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quentindommerc.superlistview.superlistview">
-
+    package="org.notlocalhost.superlistview">
     <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
->
-
-    </application>
-
+        android:label="@string/app_name"/>
 </manifest>
